Fix IE11 text overlapping bug on done pages
- Users were reporting a bug on IE11 where the first done page
  feedback question was overlapping the related links on the left.
  This change fixes it with some new CSS for the `legend` HTML, and
  applies it everywhere. It makes it no worse in Chrome etc., but a
  lot better in IE11.

--- a/app/assets/stylesheets/views/_completed-transaction.scss
+++ b/app/assets/stylesheets/views/_completed-transaction.scss
@@ -12,6 +12,10 @@
   form {
     @include core-19;
 
+    legend {
+      width: 100%;
+    }
+
     input {
       margin-right: 0.5em;
       vertical-align: 2px;
